@@ -553,10 +553,12 @@ abstract class P4A_Widget extends P4A_Object
 		$sParams = '';
 		$sActions = '';
 		if (is_string($params) or is_numeric($params)) {
+			$params = P4A_Quote_Javascript_String($params);
 			$sParams .=  ", '{$params}'";
 		} elseif (is_array($params) and count($params)) {
 			$sParams = ', ';
 			foreach ($params as $param) {
+				$param = P4A_Quote_Javascript_String($param);
 				$sParams .= "'{$param}', ";
 			}
 			$sParams = substr($sParams, 0, -2);
